--- a/src/pages/blog/how-native-feeling-can-a-web-app-become.mdx
+++ b/src/pages/blog/how-native-feeling-can-a-web-app-become.mdx
@@ -74,6 +74,9 @@ Another performance hiccup I noticed was blur effects, which I heavily used thro
 With performance out of the way, it's equally important for the app's design, both functionally and aesthetically, to provide an app-like feel to convince anyone. Most web apps struggle on this point, and it can require lots of work. In my case I went for a scandinavian design with a responsive aspect of feeling more like an app in mobile form and more like a desktop site on desktop form, to cover both cases well. A pitfall many apps fall into is having a desktop variant that is basically just an upscaled mobile app. Desktop and mobile use are entirely different experiences with entirely different use cases and input methods and shouldn't be treated as more or less the same. Some thought needs to be put into it.
 
 ## Results
+![Solsken on desktop](/images/uploads/solsken_screenshot_desktop.png)
+*Solsken on desktop*
+
 Let's revisit the checklist.
 
 * Smooth performance 🟨
@@ -82,6 +85,8 @@ Let's revisit the checklist.
 * UI tailored for the device type ✅
 
 I believe the result to be just _okay_ in all honesty. Tweaking performance and building a familiar and sleek UI only takes you so far still, and the web has ways to go to get close to native apps in most regards. On desktop it's as smooth sailing as expected but mobile phones, especially in lower end segments, still suffer from occasional hiccups and the inherent clunkiness of the web. However, the results _were_ good enough for me to switch over to this app as primary weather app, especially due to how accessible it is, always there on [solsken.app](https://solsken.app). Additionally on iPhone it runs very well, mostly due to powerful SOCs I imagine. Interesting experiment nonetheless, and my fellow Swedish folk can now rejoice in an alternative to SMHI's more than outdated app at least! 
+
+
 
 
 
