Update Blog Posts “how-native-feeling-can-a-web-app-become”

--- a/src/pages/blog/how-native-feeling-can-a-web-app-become.mdx
+++ b/src/pages/blog/how-native-feeling-can-a-web-app-become.mdx
@@ -7,6 +7,11 @@ updatedDate: ""
 author: Martin Ryberg Laude
 layout: ../../layouts/BlogPost.astro
 ---
+<div>
+<img src="/images/uploads/solsken_screenshot_mobile.png"/>
+<img src="/images/uploads/solsken_screenshot_mobile2.png"/>
+</div>
+
 ## Available technology
 It's well known by now that web technology can be leveraged to build desktop apps with decent results. Many well-known apps like Spotify, Slack and Linkedin are built this way, with complaints usually limited to excessive RAM usage and sometimes battery drain. Even this is being [addressed however](https://tauri.app), with new strides being made every passing day. 
 
