fix: alt tags on some imgs

--- a/src/pages/blog/solsken-app.mdx
+++ b/src/pages/blog/solsken-app.mdx
@@ -8,8 +8,8 @@ author: Martin Ryberg Laude
 layout: ../../layouts/BlogPost.astro
 ---
 <div>
-<img src="/images/uploads/solsken_screenshot_mobile.png"/>
-<img src="/images/uploads/solsken_screenshot_mobile2.png"/>
+<img alt="Solsken on mobile" src="/images/uploads/solsken_screenshot_mobile.png"/>
+<img alt="Solsken on mobile" src="/images/uploads/solsken_screenshot_mobile2.png"/>
 </div>
 
 ## Available technology
