feat: convert all imgs to webp

--- a/src/content/blog/react-pwa-update-system.mdx
+++ b/src/content/blog/react-pwa-update-system.mdx
@@ -3,7 +3,7 @@ layout: ../../layouts/BlogPost.astro
 title: A complete React PWA update system
 description: Updating a React PWA is a nightmare. Let's fix it.
 pubDate: 2021-12-23T23:00:00.000Z
-heroImage: /placeholder-hero.jpg
+updatedDate: ""
 slug: react-pwa-update-system
 author: Martin Ryberg Laude
 ---
@@ -24,7 +24,7 @@ The goal is a system where an update is detected as soon as the user launches th
 
 So how does this look? 
 
-![PWA update dialog](/images/uploads/screenshot_pwa_update.jpg)
+![PWA update dialog](/images/uploads/screenshot_pwa_update.webp)
 *Simple and effective*
 
 Let's build it!
