--- a/src/content/blog/solsken-app.mdx
+++ b/src/content/blog/solsken-app.mdx
@@ -8,8 +8,8 @@ author: Martin Ryberg Laude
 layout: ../../layouts/BlogPost.astro
 ---
 <div>
-<img alt="Solsken on mobile" src="/images/uploads/solsken_screenshot_mobile.png"/>
-<img alt="Solsken on mobile" src="/images/uploads/solsken_screenshot_mobile2.png"/>
+<img alt="Solsken on mobile" src="/images/uploads/solsken_screenshot_mobile.webp"/>
+<img alt="Solsken on mobile" src="/images/uploads/solsken_screenshot_mobile2.webp"/>
 </div>
 
 ## Available technology
@@ -73,13 +73,13 @@ And voilà, performance improved again.
 
 Another performance hiccup I noticed was blur effects, which I heavily used throughout the interface to conform with my design language for the app. To my surprise, the blur effects had excellent performance in Safari both on iOS and Mac, while other browsers, especially Firefox, struggled hard. With no way to improve performance I did the dreaded browser check to enable or disable most of the effects.
 
-![Blur effect showcased](/images/uploads/solsken_blur.png)
+![Blur effect showcased](/images/uploads/solsken_blur.webp)
 *Faded blur effect used throughout the UI*
 
 With performance out of the way, it's equally important for the app's design, both functionally and aesthetically, to provide an app-like feel to convince anyone. Most web apps struggle on this point, and it can require lots of work. In my case I went for a scandinavian design with a responsive aspect of feeling more like an app in mobile form and more like a desktop site on desktop form, to cover both cases well. A pitfall many apps fall into is having a desktop variant that is basically just an upscaled mobile app. Desktop and mobile use are entirely different experiences with entirely different use cases and input methods and shouldn't be treated as more or less the same. Some thought needs to be put into it.
 
 ## Results
-![Solsken on desktop](/images/uploads/solsken_screenshot_desktop.png)
+![Solsken on desktop](/images/uploads/solsken_screenshot_desktop.webp)
 *Solsken on desktop*
 
 Let's revisit the checklist.
