--- a/src/content/blog/accessible-dark-theme-switch-in-react.mdx
+++ b/src/content/blog/accessible-dark-theme-switch-in-react.mdx
@@ -4,7 +4,7 @@ title: An accessible & effective dark theme switch in React
 description: "Creating a proper dark theme switch requires more consideration
   than you might think. "
 pubDate: 2022-01-15T23:00:00.000Z
-heroImage: /placeholder-hero.jpg
+updatedDate: ""
 slug: accessible-dark-theme-switch-in-react
 author: Martin Ryberg Laude
 ---
@@ -26,7 +26,7 @@ These criteria were the result of consideration of all aspects I could think of 
 ## Result
 Given the criteria above, I developed a solution ticking all the boxes. This is hence what we will be making: 
 
-![Dark theme switch](/images/uploads/dark_theme.gif)
+![Dark theme switch](/images/uploads/dark_theme.webp)
 
 But of course, this visual doesn't answer any of the criteria. At least it shows it doesn't look horrible! It does follow the criteria strictly, but you'll have to take my word for it for now. Onto the implementation!
 
