--- a/src/content/blog/my-developer-toolbox-2023.mdx
+++ b/src/content/blog/my-developer-toolbox-2023.mdx
@@ -11,13 +11,13 @@ Digital tools can help get things done faster, and for that they’re valuable e
 
 ## Orbstack
 
-![orbstack](screenshot_orbstack.webp)
+![orbstack](/images/uploads/screenshot_orbstack.webp)
 
 [Orbstack](https://orbstack.dev/) is the latest addition to my toolbox, which finally allowed me to drop the mess that is Docker Desktop. It’s an alternative and drop-in replacement to the aforementioned piece of software, native to MacOS and with impressive performance gains in the bag. It starts quickly, it starts my containers quickly, and has significantly reduced the ram-usage of my docker containers.
 
 ## Kitty
 
-![Kitty terminal screenshot](screenshot_kitty.webp)
+![Kitty terminal screenshot](/images/uploads/screenshot_kitty.webp)
 
 [Kitty](https://sw.kovidgoyal.net/kitty/) is a high-performance GPU-accelerated cross platform terminal app that has the perfect set of features for my needs. It’s fast, it has tabs, and it’s customizable enough in the config. I see some people use web-based terminals running electron and other js-monstrosities and shake my head. At least try to reduce inflating resource needs!
 
@@ -27,7 +27,7 @@ Can’t talk about the terminal without mentioning my zsh config. I use [znap](h
 
 ## Arc Browser
 
-![arc browser screenshot](screenshot_arc.webp)
+![arc browser screenshot](/images/uploads/screenshot_arc.webp)
 
 [Arc](https://arc.net/) is an interesting one, and I see its usage expanding wildly among coworkers as well as other industry folk. It’s a different take on a browser absolutely stacked with features to increse QoL for users and especially developers, I’ve found. Boosts allow me to customize pages with css and other tools, the command bar allows me to quickly fly around the app and webpages, the spaces allow me to organize my work, especially when using profiles. It’s not even close to as efficient as safari however, so for those long days of lighter tasks, you might still want to use a webkit browser.
 
@@ -37,7 +37,7 @@ Can’t talk about the terminal without mentioning my zsh config. I use [znap](h
 
 ## Visual Studio Code
 
-![vscode screenshot](screenshot_vscode.webp)
+![vscode screenshot](/images/uploads/screenshot_vscode.webp)
 
 Duuh, but which extensions? Here are some interesting ones I love:
 
@@ -50,13 +50,13 @@ And yes, light mode. Fight me.
 
 ## Craft
 
-![Craft docs screenshot](screenshot_craft.webp)
+![Craft docs screenshot](/images/uploads/screenshot_craft.webp)
 
 [Craft](https://www.craft.do/) is a document writing app, but that's a very shallow description of the plentiful of features it offers. Native, gorgeous Mac and iOS apps, all the document tools I could possibly need including markdown writing & export, shared spaces, daily notes... In fact, I write these blog posts in craft. The closest alternative in terms of features would be notion, but another slow electron app isn't my thing, and even though notion offers far more extensive database management, that's not quite what I need.
 
 ## Timemator
 
-![timemator screenshot](screenshot_timemator.webp)
+![timemator screenshot](/images/uploads/screenshot_timemator.webp)
 
 [Timemator](https://timemator.com/) is a piece of time tracking software that works just the way I want. Easy menubar access, a calendar-app looking app to adjust things, projects, salary, automatic tracking and a popup asking if I'm still working after leaving the laptop for a while which if correct rolls back the timer to when I started being afk. It’s also a native SwiftUI app with iCloud sync on mac, iPad and iPhone. Checks all the boxes this way.
 
