feat: charter & typography updates

--- a/src/content/blog/agentic-workflow-25-aug.mdx
+++ b/src/content/blog/agentic-workflow-25-aug.mdx
@@ -11,14 +11,14 @@ In my case, I’ve adopted these new paradigms rather aggressively, while stoppi
 
 This here serves as an update on what AI-related tech and workflows I currently use in my day-to-day software engineering work. I intend to update this with new posts whenever significant changes have arrived, and through that hopefully acquire a holistic perspective on the developments made in this realm and how they affect my work.
 
-## Technology
+## Technologies I use
 
 - [Cursor](https://cursor.com/)
 - [Context7](https://context7.com/)
 - [Intric](https://www.intric.ai/en)
 - [GPT 5](https://openai.com/index/introducing-gpt-5/)
 
-## Workflow
+## The workflow
 
 I use Cursor at the moment for three reasons:
 
